<resources>
    <string name="app_name">Restaurant</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up_text">SignUp</string>
    <string name="login_text">LogIn</string>
    <string name="title_activity_login">Login</string>
    <string name="password_text">password</string>
    <string name="user_name_text">user name</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="address">address</string>
    <string name="email">Email</string>
    <string name="phone_text">Phone</string>
</resources>
