<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.samy.lmenues.signUp"
    android:background="@drawable/listauran_logo"
    >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_text"
        android:id="@+id/button_signup"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <EditText

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_first_name"
        android:hint="@string/user_name_text"
        android:layout_alignParentTop="true"
        android:layout_marginTop="82dp"
        android:layout_alignRight="@+id/editText_adress"
        android:layout_alignEnd="@+id/editText_adress"
        android:layout_alignLeft="@+id/editText_Email"
        android:layout_alignStart="@+id/editText_Email" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText_Email"
        android:hint="@string/email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText_first_name"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText2_password"
        android:hint="@string/password_text"
        android:layout_below="@+id/editText_Email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_phone_no"
        android:hint="@string/phone_text"
        android:layout_below="@+id/editText2_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_alignRight="@+id/editText2_password"
        android:layout_alignEnd="@+id/editText2_password" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_adress"
        android:layout_below="@+id/editText_phone_no"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/address"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_alignRight="@+id/editText_phone_no"
        android:layout_alignEnd="@+id/editText_phone_no" />


</RelativeLayout>
